# pod-graceful-drain

./: .gitignore  .mergify.yaml  .mergify.yml  Cargo.toml  Dockerfile  Makefile  PROJECT  README.md  build.rs  go.mod  go.sum  index.yaml  main.go  pod-graceful-drain-0.0.1.tgz  pod-graceful-drain-0.0.10-beta.1.tgz  pod-graceful-drain-0.0.10.tgz  pod-graceful-drain-0.0.11.tgz  pod-graceful-drain-0.0.2.tgz  pod-graceful-drain-0.0.3.tgz  pod-graceful-drain-0.0.4.tgz  pod-graceful-drain-0.0.5.tgz  pod-graceful-drain-0.0.6.tgz  pod-graceful-drain-0.0.7.tgz  pod-graceful-drain-0.0.8.tgz  pod-graceful-drain-0.0.9.tgz  pod-graceful-drain-0.1.0-rc.1.tgz  pod-graceful-drain-0.1.0-rc.10.tgz  pod-graceful-drain-0.1.0-rc.2.tgz  pod-graceful-drain-0.1.0-rc.3.tgz  pod-graceful-drain-0.1.0-rc.4.tgz  pod-graceful-drain-0.1.0-rc.6.tgz  pod-graceful-drain-0.1.0-rc.7.tgz  pod-graceful-drain-0.1.0-rc.8.tgz  pod-graceful-drain-0.1.0-rc.9.tgz  pod-graceful-drain-0.1.0.tgz  pod-graceful-drain-0.1.1.tgz  pyproject.toml  skaffold.yaml
.cargo/: config.toml
.github/workflows/: ci.yaml  release-chart.yaml  release-image.yaml  release.yaml  test.yaml
charts/pod-graceful-drain/: Chart.yaml  values.yaml
charts/pod-graceful-drain/templates/: _helpers.tpl  assertions.yaml  deployment.yaml  monitoring.yaml  pdb.yaml  rbac.yaml  service.yaml  serviceaccount.yaml  webhook.yaml
config/certmanager/: certificate.yaml
config/default/: kustomization.yaml  manager_auth_proxy_patch.yaml  manager_webhook_patch.yaml  webhookcainjection_patch.yaml
config/manager/: kustomization.yaml  manager.yaml  security_context_patch.yaml
config/prometheus/: monitor.yaml
config/rbac/: auth_proxy_role_binding.yaml  auth_proxy_service.yaml  role.yaml  role_binding.yaml
config/webhook/: kustomization.yaml  manifests.yaml  service.yaml  webhook_namespace_selector_patch.yaml  webhook_timeout_patch.yaml
crates/staged_shutdown/: Cargo.toml
crates/staged_shutdown/src/: lib.rs
crates/try_some/: Cargo.toml
crates/try_some/src/: lib.rs
docker/: build.Dockerfile  build.Dockerfile.dockerignore  skaffold.Dockerfile  skaffold.Dockerfile.dockerignore
forks/sigs.k8s.io/aws-load-balancer-controller@v2.1.1/docs/examples/: external-dns.yaml
forks/sigs.k8s.io/aws-load-balancer-controller@v2.1.1/pkg/k8s/: pod_info_repo.go
internal/: config.go
internal/pkg/core/: config.go  delayer.go  delayer_test.go  intercepted_admission_handler.go  intercepted_admission_response.go  interceptor.go  pod_graceful_drain.go  pod_graceful_drain_test.go  pod_mutate.go  pod_mutate_test.go  pod_state.go  pod_state_test.go  service.go
internal/pkg/interceptors/: pod_deletion.go  pod_eviction.go
internal/pkg/webhooks/: eviction_mutator.go  eviction_validator.go  pod_validator.go  timeout.go
src/: api_resolver.rs  config.rs  configs.rs  consts.rs  controller.rs  downward_api.rs  error_codes.rs  error_types.rs  impersonate.rs  labels_and_annotations.rs  lib.rs  loadbalancing.rs  patch.rs  pod_disruption_budget.rs  pod_draining_info.rs  pod_draining_state.rs  pod_evict_params.rs  pod_state.rs  reflector.rs  report.rs  selector.rs  service_registry.rs  shutdown.rs  spawn_service.rs  status.rs  utils.rs
src/controllers/: drain.rs  evict.rs  mod.rs  utils.rs
src/elbv2/: apis.rs  mod.rs
src/patch/: drain.rs  evict.rs  evict_later.rs  eviction_admission.rs  mod.rs  patch_eviction_admission.rs  patch_to_drain.rs  patch_to_evict.rs  resource_patch_util.rs
src/pdb/: budget.rs  fixup.rs  mod.rs
src/tests/: controller_drain.rs  controller_evict.rs  fixup_pdb_on_drain.rs  mod.rs  reflectors.rs  webhook_delete.rs  webhook_evict.rs
src/tests/utils/: context.rs  event_tracker.rs  mod.rs  operations.rs  pod_state.rs  run_command.rs  self_signed_cert.rs
src/webhooks/: config.rs  handle_common.rs  handle_delete.rs  handle_eviction.rs  impersonate.rs  mod.rs  patch.rs  reactive_rustls_config.rs  report.rs  self_recognize.rs  try_bind.rs
tests/: controller.rs  reflectors.rs  test-ingress.yaml  test-manual-eks.py  test_drain.py  test_smoke.py  webhooks.rs  webhooks_drain.rs
tests-integ/: test-manual-eks.py  test_drain.py  test_smoke.py
tests-integ/utils/: aws.py  docker.py  eksctl.py  helm.py  kind.py  kubectl.py  subprocess_util.py
tests/testutils/: context.rs  event_tracker.rs  macros.rs  mod.rs  operations.rs  run_command.rs
tests/utils/: eksctl.py  helm.py  kind.py  kubectl.py  subprocess_util.py
