[package]
name = "pod-graceful-drain"
description = "You don't need `lifecycle: { preStop: { exec: { command: [\"sleep\", \"30\"] } } }`"
authors = ["SeongChan Lee <foriequal@gmail.com>"]
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"

[dependencies]
# kubernetes libs
kube = { version = "3.1.0", features = ["runtime", "admission"] }
k8s-openapi = { version = "0.27.1", features = ["v1_35"] }

# async runtime libs
tokio = "1.52.3"
futures = "0.3.32"

# webhook libs
axum = { version = "0.8.9", features = ["macros"] }
axum-server = { version = "0.8.0", features = ["tls-rustls-no-provider"] }
rustls = { version = "0.23.40", default-features = false, features = ["ring"] }
rustls-pemfile = "2.2.0"

# observability libs
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-error = "0.2.1"
eyre = "0.6.12"
color-eyre = { version = "0.6.5", features = ["capture-spantrace"] }
thiserror = "2.0.18"

# auxilary libs
clap = { version = "4.6.1", features = ["derive"] }
genawaiter = { git = "https://github.com/foriequal0/genawaiter", features = ["futures03"] }
humantime = "2.3.0"
async-shutdown = "0.2.2"
serde = "1.0.228"
serde_json = "1.0.149"
json-patch = "4.2.0"
jsonptr = "0.7.1"
jiff = "0.2.24"
backon = { version = "1.6.0", default-features = false }
rand = "0.10.1"
uuid = { version = "1.23.1", features = ["v4"] }

[dev-dependencies]
tempfile = "3.27.0"
serde_yaml = "0.9.34-deprecated"
local-ip-address = "0.6.12"
base64 = "0.22.1"
rcgen = "0.14.8"
assert_matches = "1.5.0"

[build-dependencies]
anyhow = "1.0.98"
vergen-gitcl = { version = "9.1.0", features = ["build", "rustc"] }
