[project]
name = "pod-graceful-drain-integ-test"
version = "0.1.0"
description = "Integration test for pod-graceful-drain"
authors = [
    { name = "SeongChan Lee", email = "foriequal@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.1",
    "black>=25.1.0",
    "boto3>=1.36.13",
    "click>=8.1.8",
]

[tool.rye.scripts]
test-manual-eks = "python tests/test-manual-eks.py"
