[project]
name = "pod-graceful-drain-integ-test"
version = "0.1.0"
description = "Integration test for pod-graceful-drain"
authors = [
    { name = "SeongChan Lee", email = "foriequal@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.10"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "boto3>=1.43.8",
    "click>=8.3.3",
    "pytest-xdist>=3.8.0",
]
